--- a/lucas.css
+++ b/lucas.css
@@ -9,6 +9,12 @@ h1{
     font-style: normal;
 }
 
+h2{
+    font-family: Josefin Sans, sans-serif;
+    font-weight: 400;
+    font-style: normal;
+}
+
 h3{
     font-family: Josefin Sans, sans-serif;
     font-weight: 400;
